@@ -1,13 +1,13 @@
 package WBPackage;
 
 import WBPackage.BotPack.Bot;
-import org.telegram.telegrambots.meta.exceptions.TelegramApiRequestException;
+import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
 import org.telegram.telegrambots.meta.TelegramBotsApi;
-import org.telegram.telegrambots.ApiContextInitializer;
+import org.telegram.telegrambots.updatesreceivers.DefaultBotSession;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.Date;
 import java.util.Locale;
@@ -17,13 +17,11 @@ public class Main   //в этом файле всё дефолтно, кроме
     public static void main(String[] args)
     {
         Locale.setDefault(new Locale("ru", "RU"));
-        ApiContextInitializer.init();
-        TelegramBotsApi telegram = new TelegramBotsApi();
-
-        Bot osnBot = new Bot();
         try
         {
-            telegram.registerBot(osnBot);
+            Bot osnBot = new Bot();
+            TelegramBotsApi botsApi = new TelegramBotsApi(DefaultBotSession.class);
+            botsApi.registerBot(osnBot);
             osnBot.reportOleg();    //отчёт админу о запуске
             System.out.println("Registered, ready to work");    //
             String curDate = new Date().toString(); //
@@ -31,15 +29,15 @@ public class Main   //в этом файле всё дефолтно, кроме
             System.out.println(log);    //
             try
             {
-                Files.write(Path.of("botlog.txt"), ("------------------------------------------------------------\n").getBytes(), new StandardOpenOption[]{StandardOpenOption.APPEND}); //
-                Files.write(Path.of("botlog.txt"), (log + "\n").getBytes(), new StandardOpenOption[]{StandardOpenOption.APPEND});   //
+                Files.write(Paths.get("botlog.txt"), ("------------------------------------------------------------\n").getBytes(), new StandardOpenOption[]{StandardOpenOption.APPEND}); //
+                Files.write(Paths.get("botlog.txt"), (log + "\n").getBytes(), new StandardOpenOption[]{StandardOpenOption.APPEND});   //
             }
             catch (IOException e)   //
             {
                 e.printStackTrace();    //
             }
         }
-        catch (TelegramApiRequestException e)
+        catch (IOException | TelegramApiException e)
         {
             e.printStackTrace();
         }
